Update checklist generation (per measurement).

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -1033,12 +1033,12 @@
     "- [ ] Research, Development, and Internal (RDI)\n",
     "\n",
     "Benchmark (check one):\n",
-    "- [%(mobilenet)s] MobileNet\n",
+    "- [%(benchmark_mobilenet)s] MobileNet\n",
     "- [ ] SSD-MobileNet\n",
-    "- [%(resnet)s] ResNet\n",
+    "- [%(benchmark_resnet)s] ResNet\n",
     "- [ ] SSD-1200\n",
     "- [ ] NMT\n",
-    "- [%(other)s] Other, please specify:\n",
+    "- [%(benchmark_other)s] Other, please specify: %(benchmark_other_specify)s\n",
     "\n",
     "Please fill in the following tables adding lines as necessary:\n",
     "97%%-tile latency is required for NMT only. 99%%-tile is required for all other models.\n",
@@ -1046,14 +1046,14 @@
     "### Single Stream Results Table\n",
     "| SUT Name | Benchmark | Query Count | Accuracy |\n",
     "|----------|-----------|-------------|----------|\n",
-    "| hikey960 | mobilenet | 50000       | 71.676%% |\n",
-    "| rpi4     | mobilenet | 50000       | 71.676%% |\n",
-    "| firefly  | mobilenet | 50000       | 71.676%% |\n",
-    "| mate10pro| mobilenet | 50000       | 71.516%% |\n",
-    "| hikey960 | mobilenet | 50000       | 76.522%% |\n",
-    "| rpi4     | mobilenet | 50000       | 76.442%% |\n",
-    "| firefly  | mobilenet | 50000       | 76.442%% |\n",
-    "| mate10pro| mobilenet | 50000       | 28.926%% |\n",
+    "| hikey960 | mobilenet | 50000       | 71.676%%  |\n",
+    "| rpi4     | mobilenet | 50000       | 71.676%%  |\n",
+    "| firefly  | mobilenet | 50000       | 71.676%%  |\n",
+    "| mate10pro| mobilenet | 50000       | 71.516%%  |\n",
+    "| hikey960 | resnet    | 50000       | 76.522%%  |\n",
+    "| rpi4     | resnet    | 50000       | 76.442%%  |\n",
+    "| firefly  | resnet    | 50000       | 76.442%%  |\n",
+    "| mate10pro| resnet    | 50000       | 28.926%%  |\n",
     "\n",
     "### Multi-Stream Results Table\n",
     "| SUT Name | Benchmark | Query Count |  Accuracy | 97%%-tile Latency | 99%%-tile Latency |\n",
@@ -1170,8 +1170,7 @@
     "\n",
     "For each SUT and scenario, is the submission run the correct number of\n",
     "times for the relevant scenario? (check one)\n",
-    "- [x] Yes (Accuracy 1x Performance 1x Single-Stream, Multi-Stream,\n",
-    "Offline)\n",
+    "- [x] Yes (Accuracy 1x Performance 1x Single-Stream, Multi-Stream, Offline)\n",
     "- [ ] Yes (Accuracy 1x Performance 5x Server)\n",
     "- [ ] No\n",
     "\n",
@@ -1234,14 +1233,10 @@
     "For each SUT, does the submission accurately reflect the real-world\n",
     "performance of the SUT?\n",
     "- [x] Yes\n",
-    "- [ ] No\n",
-    "\"\"\"\n",
+    "- [ ] No\"\"\"\n",
     "\n",
-    "# \"systems\": \"Raspberry Pi 4 (rpi4); Firefly RK3399 (firefly); Linaro HiKey960 (hikey960); Huawei Mate 10 Pro (mate10pro)\",\n",
     "def get_checklist(checklist_template=checklist_template, name=\"Anton Lokhmotov\", email=\"anton@dividiti.com\",\n",
-    "                  system=\"Raspberry Pi 4 (rpi4)\", division_closed=True,\n",
-    "                  mobilenet=True, resnet=False, other=False,\n",
-    "                  mobilenet_accuracy_met=True, resnet_accuracy_met=True, accuracy_not_met=False):\n",
+    "                  system=\"Raspberry Pi 4 (rpi4)\", is_closed=True, benchmark='mobilenet', accuracy_met=True):\n",
     "    def tick(var): return \"x\" if var else \" \"\n",
     "    print(\"=\" * 100)\n",
     "    print(system)\n",
@@ -1251,24 +1246,25 @@
     "        \"email\" : email,\n",
     "        \"systems\": system,\n",
     "        # Division.\n",
-    "        \"open\" : tick(not division_closed),\n",
-    "        \"closed\" : tick(division_closed),\n",
+    "        \"closed\" : tick(is_closed),\n",
+    "        \"open\" : tick(not is_closed),\n",
     "        # Benchmark.\n",
-    "        \"mobilenet\": tick(mobilenet),\n",
-    "        \"resnet\": tick(resnet),\n",
-    "        \"other\": tick(other),\n",
+    "        \"benchmark_mobilenet\": tick(benchmark=='mobilenet'),\n",
+    "        \"benchmark_resnet\": tick(benchmark=='resnet'),\n",
+    "        \"benchmark_other\": tick(benchmark not in [ 'mobilenet', 'resnet']),\n",
+    "        \"benchmark_other_specify\": benchmark if benchmark not in [ 'mobilenet', 'resnet' ] else '',\n",
     "        # Accuracy.\n",
-    "        \"mobilenet_accuracy_met\" : tick(mobilenet and mobilenet_accuracy_met),\n",
-    "        \"resnet_accuracy_met\" : tick(resnet and resnet_accuracy_met),\n",
-    "        \"accuracy_not_met\" : tick((resnet and not resnet_accuracy_met) or (mobilenet and not mobilenet_accuracy_met) or accuracy_not_met)\n",
+    "        \"mobilenet_accuracy_met\" : tick(benchmark=='mobilenet' and accuracy_met),\n",
+    "        \"resnet_accuracy_met\" : tick(benchmark=='resnet' and accuracy_met),\n",
+    "        \"accuracy_not_met\" : tick(not accuracy_met)\n",
     "    }\n",
     "    print(checklist)\n",
     "    print(\"-\" * 100)\n",
     "    \n",
     "    return checklist\n",
     "\n",
-    "null = get_checklist(system='Linaro HiKey 960 (hikey960)', mobilenet=False, resnet=True)\n",
-    "null = get_checklist(system='Huawei Mate 10 Pro (mate10pro)', mobilenet=False, resnet=True, resnet_accuracy_met=False)"
+    "# null = get_checklist(system='Linaro HiKey 960 (hikey960)', benchmark='shufflenet')\n",
+    "# null = get_checklist(system='Huawei Mate 10 Pro (mate10pro)', benchmark='resnet', accuracy_met=False)"
    ]
   },
   {
@@ -1495,21 +1491,7 @@
     "        if not os.path.exists(code_dir): os.mkdir(code_dir)\n",
     "        # FIXME: For now, not always \"per reference\".\n",
     "        benchmark_dir = os.path.join(code_dir, benchmark)\n",
-    "        if not os.path.exists(benchmark_dir): os.mkdir(benchmark_dir)\n",
-    "\n",
-    "        # Write checklist for each benchmark.\n",
-    "        checklist_name = 'submission_checklist.txt'\n",
-    "        checklist_path = os.path.join(benchmark_dir, checklist_name)\n",
-    "        if(benchmark == 'mobilenet'):\n",
-    "            checklist = get_checklist(system='Huawei Mate 10 Pro (mate10pro)')\n",
-    "        elif(benchmark == 'resnet'):\n",
-    "            checklist = get_checklist(system='Huawei Mate 10 Pro (mate10pro)',\n",
-    "                                      mobilenet=False, resnet=True, resnet_accuracy_met=False)\n",
-    "        else:\n",
-    "            checklist = ''\n",
-    "        with open(checklist_path, 'w') as checklist_file:\n",
-    "            checklist_file.writelines(checklist)\n",
-    "            \n",
+    "        if not os.path.exists(benchmark_dir): os.mkdir(benchmark_dir)            \n",
     "        implementation_dir = os.path.join(benchmark_dir, implementation)\n",
     "        if not os.path.exists(implementation_dir): os.mkdir(implementation_dir)\n",
     "        print('%s' % code_dir)\n",
@@ -1527,7 +1509,6 @@
     "            raise\n",
     "        else:\n",
     "            print('  |_ %s' % implementation_readme_name)\n",
-    "        # TODO: Copy run.sh\n",
     "\n",
     "        #\n",
     "        #     \"measurements\"/\n",
@@ -1539,6 +1520,7 @@
     "        #             user.conf\n",
     "        #             mlperf.conf\n",
     "        #             calibration_process.adoc (?)\n",
+    "        #             submission_checklist.txt\n",
     "        #\n",
     "        measurements_dir = os.path.join(organization_dir, 'measurements')\n",
     "        if not os.path.exists(measurements_dir): os.mkdir(measurements_dir)\n",
@@ -1595,7 +1577,20 @@
     "            upstream_mlperf_conf_path = os.path.join(upstream_path, 'v0.5', 'mlperf.conf')\n",
     "            copy2(upstream_mlperf_conf_path, mlperf_conf_path)\n",
     "            print('  |_ %s [from %s]' % (mlperf_conf_name, upstream_mlperf_conf_path))\n",
-    "        \n",
+    "\n",
+    "        # Write checklist for each system, benchmark and scenario.\n",
+    "        checklist_name = 'submission_checklist.txt'\n",
+    "        system_json = division_systems.get(division_system, default_system_json)\n",
+    "        system_name = system_json['system_name']\n",
+    "        checklist_path = os.path.join(scenario_dir, checklist_name)\n",
+    "        is_closed = True if division=='closed' else False\n",
+    "        is_mate10pro_armnn = (system=='mate10pro-armnn-v19.08-neon') or (system=='mate10pro-armnn-v19.08-opencl')\n",
+    "        accuracy_met = True if not (is_mate10pro_armnn and benchmark=='resnet') else False\n",
+    "        print('  |_ %s [\"accuracy_met=%s\"]' % (checklist_name, accuracy_met))\n",
+    "        checklist = get_checklist(is_closed=is_closed, system=system_name, benchmark=benchmark, accuracy_met=accuracy_met)\n",
+    "        with open(checklist_path, 'w') as checklist_file:\n",
+    "            checklist_file.writelines(checklist)\n",
+    "   \n",
     "        #\n",
     "        #     \"results\"/\n",
     "        #       <system_desc_id>/\n",
@@ -1674,37 +1669,42 @@
     "#             trace_json_path = os.path.join(last_dir, trace_json_name)\n",
     "#             with open(trace_json_path, 'w') as trace_json_file:\n",
     "#                 json.dump(mlperf_log.get('trace',{}), trace_json_file, indent=2)    \n",
-    "    \n",
-    "    print(\"*\" * 100)\n",
-    "    submission_checker_py = os.path.join(upstream_path, 'v0.5', 'tools', 'submission', 'submission-checker.py')\n",
-    "    \n",
-    "    # The checker has a weird bug. When submitting to open, 'closed/<organization>/results' must exist on disk.\n",
-    "    # Vice versa, When submitting to closed, 'open/<organization>/results' must exist on disk. \n",
-    "    # Therefore, create both directories if they do not exist before invoking the checker.\n",
-    "    open_org_results_dir = os.path.join(root_dir, 'open', organization, 'results')\n",
-    "    closed_org_results_dir = os.path.join(root_dir, 'closed', organization, 'results')\n",
-    "    !mkdir -p $open_org_results_dir\n",
-    "    !mkdir -p $closed_org_results_dir\n",
-    "    # Run the checker.\n",
-    "    checker_log = !python3 $submission_checker_py --input $root_dir --submitter $submitter\n",
-    "    checker_log = \"\\n\".join(checker_log)\n",
-    "    print(checker_log)\n",
-    "    checker_log_name = 'compliance_checker_log.txt'\n",
-    "    checker_log_path = os.path.join(system_dir, checker_log_name)\n",
-    "    with open(checker_log_path, 'w') as checker_log_file:\n",
-    "        checker_log_file.writelines(checker_log)\n",
-    "        print(organization_dir)\n",
-    "        print('  |_%s' % checker_log_name)\n",
     "\n",
     "    return\n",
+    "\n",
+    "# The path is where mlperf/submissions_inference_0_5 is cloned under.\n",
+    "path = '/home/anton/projects/mlperf/'\n",
+    "submitter = 'dividiti'\n",
     "\n",
     "# repos = [\n",
     "#     'mlperf.closed.image-classification.mate10pro.armnn-v19.08.neon'\n",
     "# ]\n",
     "repos = repos_merged\n",
     "for repo_uoa in repos:\n",
-    "    # The path is where mlperf/submissions_inference_0_5 is cloned under.\n",
-    "    check_experimental_results(repo_uoa, path='/home/anton/projects/mlperf/')"
+    "    check_experimental_results(repo_uoa, path=path, submitter=submitter)\n",
+    "    \n",
+    "print(\"*\" * 100)\n",
+    "submission_checker_py = os.path.join(upstream_path, 'v0.5', 'tools', 'submission', 'submission-checker.py')\n",
+    "# The checker has a weird bug. When submitting to open, 'closed/<organization>/results' must exist on disk.\n",
+    "# Vice versa, When submitting to closed, 'open/<organization>/results' must exist on disk. \n",
+    "# Therefore, create both directories if they do not exist before invoking the checker.\n",
+    "root_dir = os.path.join(path, 'submissions_inference_0_5')\n",
+    "open_org_results_dir = os.path.join(root_dir, 'open', submitter, 'results')\n",
+    "closed_org_results_dir = os.path.join(root_dir, 'closed', submitter, 'results')\n",
+    "!mkdir -p $open_org_results_dir\n",
+    "!mkdir -p $closed_org_results_dir\n",
+    "# Run the checker.\n",
+    "checker_log = !python3 $submission_checker_py --input $root_dir --submitter $submitter\n",
+    "checker_log = \"\\n\".join(checker_log)\n",
+    "print(checker_log)\n",
+    "checker_log_name = 'compliance_checker_log.txt'\n",
+    "# Write the checker results once closed/<organization> and once under open/<organization>.\n",
+    "for results_dir in [ open_org_results_dir, closed_org_results_dir ]:\n",
+    "    checker_log_path = os.path.join(results_dir, checker_log_name)\n",
+    "    with open(checker_log_path, 'w') as checker_log_file:\n",
+    "        checker_log_file.writelines(checker_log)\n",
+    "        print(results_dir)\n",
+    "        print('  |_%s' % checker_log_name)"
    ]
   }
  ],
