--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -1021,7 +1021,7 @@
     "\n",
     "Email of Certifying Engineer(s): %(email)s\n",
     "\n",
-    "Name of System(s) Under Test: %(systems)s\n",
+    "Name of System(s) Under Test: %(system_name)s\n",
     "\n",
     "Division (check one):\n",
     "- [%(open)s] Open\n",
@@ -1046,14 +1046,7 @@
     "### Single Stream Results Table\n",
     "| SUT Name | Benchmark | Query Count | Accuracy |\n",
     "|----------|-----------|-------------|----------|\n",
-    "| hikey960 | mobilenet | 50000       | 71.676%%  |\n",
-    "| rpi4     | mobilenet | 50000       | 71.676%%  |\n",
-    "| firefly  | mobilenet | 50000       | 71.676%%  |\n",
-    "| mate10pro| mobilenet | 50000       | 71.516%%  |\n",
-    "| hikey960 | resnet    | 50000       | 76.522%%  |\n",
-    "| rpi4     | resnet    | 50000       | 76.442%%  |\n",
-    "| firefly  | resnet    | 50000       | 76.442%%  |\n",
-    "| mate10pro| resnet    | 50000       | 28.926%%  |\n",
+    "| %(system)s | %(benchmark)s | 50000 | %(accuracy_pc)s%% |\n",
     "\n",
     "### Multi-Stream Results Table\n",
     "| SUT Name | Benchmark | Query Count |  Accuracy | 97%%-tile Latency | 99%%-tile Latency |\n",
@@ -1235,36 +1228,46 @@
     "- [x] Yes\n",
     "- [ ] No\"\"\"\n",
     "\n",
-    "def get_checklist(checklist_template=checklist_template, name=\"Anton Lokhmotov\", email=\"anton@dividiti.com\",\n",
-    "                  system=\"Raspberry Pi 4 (rpi4)\", is_closed=True, benchmark='mobilenet', accuracy_met=True):\n",
+    "def get_checklist(checklist_template=checklist_template, name='Anton Lokhmotov', email='anton@dividiti.com',\n",
+    "                  system='rpi4-tflite-v1.15', system_name='Raspberry Pi 4 (rpi4)',\n",
+    "                  division='closed', benchmark='mobilenet', accuracy_pc=12.345, accuracy_met=True):\n",
     "    def tick(var): return \"x\" if var else \" \"\n",
     "    print(\"=\" * 100)\n",
     "    print(system)\n",
     "    print(\"=\" * 100)\n",
+    "    benchmark_other = benchmark not in [ 'mobilenet', 'resnet']\n",
+    "    if benchmark=='mobilenet':\n",
+    "        accuracy_met = accuracy_pc >= 71.676*0.98\n",
+    "    elif benchmark=='resnet':\n",
+    "        accuracy_met = accuracy_pc >= 76.456*0.99\n",
     "    checklist = checklist_template % {\n",
     "        \"name\" : name,\n",
     "        \"email\" : email,\n",
-    "        \"systems\": system,\n",
+    "        \"system_name\": system_name,\n",
     "        # Division.\n",
-    "        \"closed\" : tick(is_closed),\n",
-    "        \"open\" : tick(not is_closed),\n",
+    "        \"closed\" : tick(division=='closed'),\n",
+    "        \"open\" : tick(division=='open'),\n",
     "        # Benchmark.\n",
     "        \"benchmark_mobilenet\": tick(benchmark=='mobilenet'),\n",
     "        \"benchmark_resnet\": tick(benchmark=='resnet'),\n",
-    "        \"benchmark_other\": tick(benchmark not in [ 'mobilenet', 'resnet']),\n",
-    "        \"benchmark_other_specify\": benchmark if benchmark not in [ 'mobilenet', 'resnet' ] else '',\n",
+    "        \"benchmark_other\": tick(benchmark_other),\n",
+    "        \"benchmark_other_specify\": benchmark if benchmark_other else '',\n",
     "        # Accuracy.\n",
     "        \"mobilenet_accuracy_met\" : tick(benchmark=='mobilenet' and accuracy_met),\n",
     "        \"resnet_accuracy_met\" : tick(benchmark=='resnet' and accuracy_met),\n",
-    "        \"accuracy_not_met\" : tick(not accuracy_met)\n",
+    "        \"accuracy_not_met\" : tick(not accuracy_met),\n",
+    "        # Table.\n",
+    "        \"system\" : system,\n",
+    "        \"benchmark\" : benchmark,\n",
+    "        \"accuracy_pc\" : \"%.3f\" % accuracy_pc\n",
     "    }\n",
     "    print(checklist)\n",
     "    print(\"-\" * 100)\n",
     "    \n",
     "    return checklist\n",
     "\n",
-    "# null = get_checklist(system='Linaro HiKey 960 (hikey960)', benchmark='shufflenet')\n",
-    "# null = get_checklist(system='Huawei Mate 10 Pro (mate10pro)', benchmark='resnet', accuracy_met=False)"
+    "null = get_checklist(system='rpi4-armnn-v19.08-neon', system_name='Raspberry Pi 4 (rpi4)', benchmark='mobilenet', accuracy_pc=70.241)\n",
+    "null = get_checklist(system='hikey960-tflite-v1.15', system_name='Linaro HiKey 960 (hikey960)', benchmark='resnet', accuracy_pc=75.692)"
    ]
   },
   {
@@ -1578,19 +1581,8 @@
     "            copy2(upstream_mlperf_conf_path, mlperf_conf_path)\n",
     "            print('  |_ %s [from %s]' % (mlperf_conf_name, upstream_mlperf_conf_path))\n",
     "\n",
-    "        # Write checklist for each system, benchmark and scenario.\n",
-    "        checklist_name = 'submission_checklist.txt'\n",
-    "        system_json = division_systems.get(division_system, default_system_json)\n",
-    "        system_name = system_json['system_name']\n",
-    "        checklist_path = os.path.join(scenario_dir, checklist_name)\n",
-    "        is_closed = True if division=='closed' else False\n",
-    "        is_mate10pro_armnn = (system=='mate10pro-armnn-v19.08-neon') or (system=='mate10pro-armnn-v19.08-opencl')\n",
-    "        accuracy_met = True if not (is_mate10pro_armnn and benchmark=='resnet') else False\n",
-    "        print('  |_ %s [\"accuracy_met=%s\"]' % (checklist_name, accuracy_met))\n",
-    "        checklist = get_checklist(is_closed=is_closed, system=system_name, benchmark=benchmark, accuracy_met=accuracy_met)\n",
-    "        with open(checklist_path, 'w') as checklist_file:\n",
-    "            checklist_file.writelines(checklist)\n",
-    "   \n",
+    "        # Write submission_checklist.txt below, once accuracy.txt is parsed.\n",
+    "        \n",
     "        #\n",
     "        #     \"results\"/\n",
     "        #       <system_desc_id>/\n",
@@ -1660,10 +1652,21 @@
     "                accuracy_txt_name = 'accuracy.txt'\n",
     "                accuracy_txt_path = os.path.join(last_dir, accuracy_txt_name)\n",
     "                accuracy_txt = !python3 $accuracy_imagenet_py --imagenet-val-file $imagenet_val_file --mlperf-accuracy-file $accuracy_json_path\n",
+    "                accuracy_line = accuracy_txt[0]\n",
     "                with open(accuracy_txt_path, 'w') as accuracy_txt_file:\n",
     "                    accuracy_txt_file.writelines(accuracy_txt)\n",
-    "                    # Print the first line containing accuracy info.\n",
-    "                    print('  |_ %s [\"%s\"]' % (accuracy_txt_name, accuracy_txt[0]))\n",
+    "                    print('  |_ %s [\"%s\"]' % (accuracy_txt_name, accuracy_line))                \n",
+    "                # Write checklist for each system, benchmark and scenario under \"measurements/\".\n",
+    "                checklist_name = 'submission_checklist.txt'\n",
+    "                checklist_path = os.path.join(measurements_dir, system, benchmark, scenario, checklist_name)\n",
+    "                system_json = division_systems.get(division_system, default_system_json)\n",
+    "                match = re.match('accuracy=(.+)%, good=(\\d+), total=(\\d+)', accuracy_line)\n",
+    "                accuracy_pc = float(match.group(1))\n",
+    "                checklist = get_checklist(division=division, system=system, system_name=system_json['system_name'],\n",
+    "                                          benchmark=benchmark, accuracy_pc=accuracy_pc)\n",
+    "                with open(checklist_path, 'w') as checklist_file:\n",
+    "                    checklist_file.writelines(checklist)                    \n",
+    "                    \n",
     "#             # Trace file (should omit trace from v0.5).\n",
     "#             trace_json_name = 'mlperf_log_trace.json'\n",
     "#             trace_json_path = os.path.join(last_dir, trace_json_name)\n",
