Resubmit resnet accuracy on mate10pro.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -878,10 +878,10 @@
    "metadata": {},
    "source": [
     "```\n",
-    "$ wget https://www.dropbox.com/s/t2o2elqdyitqlpi/mlperf.closed.image-classification.mate10pro.armnn-v19.08.neon.zip\n",
+    "$ wget https://www.dropbox.com/s/r7hss1sd0268b9j/mlperf.closed.image-classification.mate10pro.armnn-v19.08.neon.zip\n",
     "$ ck add repo --zip=mlperf.closed.image-classification.mate10pro.armnn-v19.08.neon.zip\n",
     "\n",
-    "$ wget https://www.dropbox.com/s/bi2owxxpcfm6n2s/mlperf.closed.image-classification.mate10pro.armnn-v19.08.opencl.zip\n",
+    "$ wget https://www.dropbox.com/s/iflzxbxcv3qka9x/mlperf.closed.image-classification.mate10pro.armnn-v19.08.opencl.zip\n",
     "$ ck add repo --zip=mlperf.closed.image-classification.mate10pro.armnn-v19.08.opencl.zip\n",
     "```"
    ]
@@ -897,7 +897,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### `mate10pro` (\"BAD LOADGEN\" - only for testing the checker)"
+    "#### `mate10pro` (only for testing the checker)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### BAD_LOADGEN"
    ]
   },
   {
@@ -907,6 +914,26 @@
     "```\n",
     "$ wget https://www.dropbox.com/s/nts8e7unb7vm68f/mlperf.closed.image-classification.mate10pro.tflite-v1.13.mobilenet.BAD_LOADGEN.zip\n",
     "$ ck add repo --zip=mlperf.closed.image-classification.mate10pro.tflite-v1.13.mobilenet.BAD_LOADGEN.zip\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### BAD_RESNET"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "$ wget https://www.dropbox.com/s/bi2owxxpcfm6n2s/mlperf.closed.image-classification.mate10pro.armnn-v19.08.opencl.BAD_RESNET.zip\n",
+    "$ ck add repo --zip=mlperf.closed.image-classification.mate10pro.armnn-v19.08.opencl.BAD_RESNET.zip\n",
+    "\n",
+    "$ wget https://www.dropbox.com/s/t2o2elqdyitqlpi/mlperf.closed.image-classification.mate10pro.armnn-v19.08.neon.BAD_RESNET.zip\n",
+    "$ ck add repo --zip=mlperf.closed.image-classification.mate10pro.armnn-v19.08.neon.BAD_RESNET.zip\n",
     "```"
    ]
   },
@@ -1679,10 +1706,11 @@
     "path = '/home/anton/projects/mlperf/'\n",
     "submitter = 'dividiti'\n",
     "\n",
-    "# repos = [\n",
-    "#     'mlperf.closed.image-classification.mate10pro.armnn-v19.08.neon'\n",
-    "# ]\n",
-    "repos = repos_merged\n",
+    "repos = [\n",
+    "    'mlperf.closed.image-classification.mate10pro.armnn-v19.08.neon',\n",
+    "    'mlperf.closed.image-classification.mate10pro.armnn-v19.08.opencl'\n",
+    "]\n",
+    "# repos = repos_merged\n",
     "for repo_uoa in repos:\n",
     "    check_experimental_results(repo_uoa, path=path, submitter=submitter)\n",
     "    \n",
