Add loadgen revision. Prepare for uploading quantized results.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -890,7 +890,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TODO:** accuracy experiment with TFLite v1.15 for ResNet aborted (estimated 17 hours)."
+    "**TODO:** accuracy experiment with TFLite for ResNet aborted (estimated 17 hours)."
    ]
   },
   {
@@ -960,11 +960,16 @@
     "$ wget https://www.dropbox.com/s/q8ieqgnr3zn6w4y/mlperf.open.image-classification.firefly.tflite-v1.15.zip\n",
     "$ ck add repo --zip=mlperf.open.image-classification.firefly.tflite-v1.15.zip\n",
     "\n",
+    "$ wget https://www.dropbox.com/s/zpenduz1i4qt651/mlperf.open.image-classification.firefly.tflite-v1.15.mobilenet-v1-quantized.zip\n",
+    "$ ck add repo --zip=mlperf.open.image-classification.firefly.tflite-v1.15.mobilenet-v1-quantized.zip\n",
+    "\n",
     "$ wget https://www.dropbox.com/s/3mmefvxc15m9o5b/mlperf.open.image-classification.firefly.armnn-v19.08.opencl.zip\n",
     "$ ck add repo --zip=mlperf.open.image-classification.firefly.armnn-v19.08.opencl.zip\n",
     "\n",
     "$ wget https://www.dropbox.com/s/hrupp4o4apo3dfa/mlperf.open.image-classification.firefly.armnn-v19.08.neon.zip\n",
     "$ ck add repo --zip=mlperf.open.image-classification.firefly.armnn-v19.08.neon.zip\n",
+    "\n",
+    "$ wget https://www.dropbox.com/s/zpenduz1i4qt651/mlperf.open.image-classification.firefly.tflite-v1.15.mobilenet-v1-quantized.zip\n",
     "```"
    ]
   },
@@ -982,6 +987,9 @@
     "```\n",
     "$ wget https://www.dropbox.com/s/2gbbpsd2pjurvc8/mlperf.open.image-classification.hikey960.tflite-v1.15.zip\n",
     "$ ck add repo --zip=mlperf.open.image-classification.hikey960.tflite-v1.15.zip\n",
+    "\n",
+    "$ wget https://www.dropbox.com/s/rmttjnxzih9snzh/mlperf.open.image-classification.hikey960.tflite-v1.15.mobilenet-v1-quantized.zip\n",
+    "$ ck add repo --zip=mlperf.open.image-classification.hikey960.tflite-v1.15.mobilenet-v1-quantized.zip\n",
     "\n",
     "$ wget https://www.dropbox.com/s/m5illg8i2tse5hg/mlperf.open.image-classification.hikey960.armnn-v19.08.opencl.zip\n",
     "$ ck add repo --zip=mlperf.open.image-classification.hikey960.armnn-v19.08.opencl.zip\n",
@@ -1006,6 +1014,9 @@
     "$ wget https://www.dropbox.com/s/awhdqjq3p4tre2q/mlperf.open.image-classification.rpi4.tflite-v1.15.zip\n",
     "$ ck add repo --zip=mlperf.open.image-classification.rpi4.tflite-v1.15.zip\n",
     "\n",
+    "$ wget https://www.dropbox.com/s/rf8vsg5firhjzf8/mlperf.open.image-classification.rpi4.tflite-v1.15.mobilenet-v1-quantized.zip\n",
+    "$ ck add repo --zip=mlperf.open.image-classification.rpi4.tflite-v1.15.mobilenet-v1-quantized.zip\n",
+    "\n",
     "$ wget https://www.dropbox.com/s/0oketvqml7gyzl0/mlperf.open.image-classification.rpi4.armnn-v19.08.neon.zip\n",
     "$ ck add repo --zip=mlperf.open.image-classification.rpi4.armnn-v19.08.neon.zip\n",
     "```"
@@ -1015,7 +1026,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### `mate10pro` (a perfectly valid closed submission - just a little bit late after the deadline)"
+    "#### `mate10pro`"
    ]
   },
   {
@@ -1026,6 +1037,13 @@
     "$ wget https://www.dropbox.com/s/avi6h9m2demz5zr/mlperf.open.image-classification.mate10pro.tflite-v1.13.mobilenet.zip\n",
     "$ ck add repo --zip=mlperf.open.image-classification.mate10pro.tflite-v1.13.mobilenet.zip\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**NB:** `mate10pro.tflite-v1.13.mobilenet` would have been a perfectly valid closed submission, just arrived a little bit late after the deadline. `mate10pro.tflite-v1.13.mobilenet-quantized` is an open submission alright, as dividiti hadn't declared submitting quantized results before the deadline."
    ]
   },
   {
@@ -1156,12 +1174,12 @@
     "- [ ] No\n",
     "\n",
     "Is your loadgen commit from one of these allowed commit hashes?\n",
-    "- [x] 61220457dec221ed1984c62bd9d382698bd71bc6\n",
-    "- [ ] 5684c11e3987b614aae830390fa0e92f56b7e800\n",
-    "- [ ] 55c0ea4e772634107f3e67a6d0da61e6a2ca390d\n",
-    "- [ ] d31c18fbd9854a4f1c489ca1bc4cd818e48f2bc5\n",
-    "- [ ] 1d0e06e54a7d763cf228bdfd8b1e987976e4222f\n",
-    "- [x] Other, please specify:\n",
+    "- [%(revision_61220457de)s] 61220457dec221ed1984c62bd9d382698bd71bc6\n",
+    "- [%(revision_5684c11e39)s] 5684c11e3987b614aae830390fa0e92f56b7e800\n",
+    "- [%(revision_55c0ea4e77)s] 55c0ea4e772634107f3e67a6d0da61e6a2ca390d\n",
+    "- [%(revision_d31c18fbd9)s] d31c18fbd9854a4f1c489ca1bc4cd818e48f2bc5\n",
+    "- [%(revision_1d0e06e54a)s] 1d0e06e54a7d763cf228bdfd8b1e987976e4222f\n",
+    "- [%(revision_other)s] Other, please specify: %(revision_other_specify)s\n",
     "\n",
     "Do you have any additional change to LoadGen? (check one)\n",
     "- [ ] Yes, please specify:\n",
@@ -1256,12 +1274,13 @@
     "- [ ] No\"\"\"\n",
     "\n",
     "def get_checklist(checklist_template=checklist_template, name='Anton Lokhmotov', email='anton@dividiti.com',\n",
-    "                  system='rpi4-tflite-v1.15', system_name='Raspberry Pi 4 (rpi4)',\n",
-    "                  division='closed', benchmark='mobilenet', accuracy_pc=12.345, accuracy_met=True):\n",
+    "                  system='rpi4-tflite-v1.15', system_name='Raspberry Pi 4 (rpi4)', revision='61220457de',\n",
+    "                  division='closed', benchmark='mobilenet', accuracy_pc=12.345, accuracy_met=True):    \n",
     "    def tick(var): return \"x\" if var else \" \"\n",
     "    print(\"=\" * 100)\n",
     "    print(system)\n",
     "    print(\"=\" * 100)\n",
+    "    revision_other = revision not in [ '61220457de', '5684c11e39', '55c0ea4e77', 'd31c18fbd9', '1d0e06e54a' ]\n",
     "    benchmark_other = benchmark not in [ 'mobilenet', 'resnet']\n",
     "    if benchmark=='mobilenet':\n",
     "        accuracy_met = accuracy_pc >= 71.676*0.98\n",
@@ -1283,6 +1302,14 @@
     "        \"mobilenet_accuracy_met\" : tick(benchmark=='mobilenet' and accuracy_met),\n",
     "        \"resnet_accuracy_met\" : tick(benchmark=='resnet' and accuracy_met),\n",
     "        \"accuracy_not_met\" : tick(not accuracy_met),\n",
+    "        # LoadGen revision.\n",
+    "        \"revision_61220457de\": tick(revision=='61220457de'),\n",
+    "        \"revision_5684c11e39\": tick(revision=='5684c11e39'),\n",
+    "        \"revision_55c0ea4e77\": tick(revision=='55c0ea4e77'),\n",
+    "        \"revision_d31c18fbd9\": tick(revision=='d31c18fbd9'),\n",
+    "        \"revision_1d0e06e54a\": tick(revision=='1d0e06e54a'),\n",
+    "        \"revision_other\":  tick(revision_other), \n",
+    "        \"revision_other_specify\": revision if revision_other else '',\n",
     "        # Table.\n",
     "        \"system\" : system,\n",
     "        \"benchmark\" : benchmark,\n",
@@ -1294,7 +1321,7 @@
     "    return checklist\n",
     "\n",
     "null = get_checklist(system='rpi4-armnn-v19.08-neon', system_name='Raspberry Pi 4 (rpi4)', benchmark='mobilenet', accuracy_pc=70.241)\n",
-    "null = get_checklist(system='hikey960-tflite-v1.15', system_name='Linaro HiKey 960 (hikey960)', benchmark='resnet', accuracy_pc=75.692)"
+    "null = get_checklist(system='hikey960-tflite-v1.15', system_name='Linaro HiKey 960 (hikey960)', benchmark='resnet', accuracy_pc=75.692, revision='deadbeef')"
    ]
   },
   {
@@ -1337,15 +1364,18 @@
     "repos_image_classification_open = [\n",
     "    # firefly\n",
     "    'mlperf.open.image-classification.firefly.tflite-v1.15', # https://github.com/mlperf/submissions_inference_0_5/pull/39\n",
+    "    'mlperf.open.image-classification.firefly.tflite-v1.15.mobilenet-v1-quantized', # ready to upload\n",
     "    'mlperf.open.image-classification.firefly.armnn-v19.08.opencl', # https://github.com/mlperf/submissions_inference_0_5/pull/40\n",
-    "    'mlperf.open.image-classification.firefly.armnn-v19.08.neon', # ready for upload\n",
+    "    'mlperf.open.image-classification.firefly.armnn-v19.08.neon', # https://github.com/mlperf/submissions_inference_0_5/pull/120\n",
     "    # hikey960\n",
     "    'mlperf.open.image-classification.hikey960.tflite-v1.15', # https://github.com/mlperf/submissions_inference_0_5/pull/37\n",
+    "    'mlperf.open.image-classification.hikey960.tflite-v1.15.mobilenet-v1-quantized', # ready to upload    \n",
     "    'mlperf.open.image-classification.hikey960.armnn-v19.08.opencl', # https://github.com/mlperf/submissions_inference_0_5/pull/38\n",
-    "    'mlperf.open.image-classification.hikey960.armnn-v19.08.neon', # ready for upload\n",
+    "    'mlperf.open.image-classification.hikey960.armnn-v19.08.neon', # https://github.com/mlperf/submissions_inference_0_5/pull/121\n",
     "    # rpi4\n",
-    "    'mlperf.open.image-classification.rpi4.tflite-v1.15', # ready for upload\n",
-    "    'mlperf.open.image-classification.rpi4.armnn-v19.08.neon', # ready for upload\n",
+    "    'mlperf.open.image-classification.rpi4.tflite-v1.15', # https://github.com/mlperf/submissions_inference_0_5/pull/122\n",
+    "    'mlperf.open.image-classification.rpi4.tflite-v1.15.mobilenet-v1-quantized', # ready to upload    \n",
+    "    'mlperf.open.image-classification.rpi4.armnn-v19.08.neon', # https://github.com/mlperf/submissions_inference_0_5/pull/123\n",
     "]\n",
     "\n",
     "repos = repos_image_classification_closed + repos_image_classification_open"
@@ -1447,6 +1477,8 @@
     "        #print(tags)\n",
     "        backend = ''\n",
     "        if 'accuracy' in tags:\n",
+    "            # FIXME: With the benefit of hindsight, [ ..., \"armnn-v19.08\", \"neon\", ... ] should have come \n",
+    "            # as one tag \"armnn-v19.08-neon\", since we join them in this notebook anyway.\n",
     "            if 'neon' in tags or 'opencl' in tags:\n",
     "                # Expected format: [ \"mlperf\", \"open\", \"image-classification\", \"firefly\", \"armnn-v19.08\", \"neon\", \"mobilenet-v1-0.5-128\", \"singlestream\", \"accuracy\", \"using-opencv\" ]\n",
     "                (_, division, task, platform, library, backend, benchmark, scenario, mode, preprocessing) = tags\n",
@@ -1608,7 +1640,7 @@
     "            copy2(upstream_mlperf_conf_path, mlperf_conf_path)\n",
     "            print('  |_ %s [from %s]' % (mlperf_conf_name, upstream_mlperf_conf_path))\n",
     "\n",
-    "        # Write submission_checklist.txt below, once accuracy.txt is parsed.\n",
+    "        # Write submission_checklist.txt into the same directory later, once accuracy.txt is parsed.\n",
     "        \n",
     "        #\n",
     "        #     \"results\"/\n",
@@ -1655,14 +1687,19 @@
     "            # Summary file (with errors and warnings in accuracy mode, with statistics in performance mode).\n",
     "            summary_txt_name = 'mlperf_log_summary.txt'\n",
     "            summary_txt_path = os.path.join(last_dir, summary_txt_name)\n",
+    "            summary = mlperf_log.get('summary','')\n",
     "            with open(summary_txt_path, 'w') as summary_txt_file:\n",
-    "                summary_txt_file.writelines(mlperf_log.get('summary',''))\n",
+    "                summary_txt_file.writelines(summary)\n",
     "                print('  |_ %s' % summary_txt_name)\n",
     "            # Detail file (with settings).\n",
     "            detail_txt_name = 'mlperf_log_detail.txt'\n",
     "            detail_txt_path = os.path.join(last_dir, detail_txt_name)\n",
+    "            detail = mlperf_log.get('detail','')\n",
+    "            # Extract revision from the second line e.g.\n",
+    "            # \"pid\": 28660, \"tid\": 28660, \"ts\": 8750ns : version : .5a1 @ 61220457de\n",
+    "            loadgen_revision = detail[1].split('@')[1].strip()\n",
     "            with open(detail_txt_path, 'w') as detail_txt_file:\n",
-    "                detail_txt_file.writelines(mlperf_log.get('detail',''))\n",
+    "                detail_txt_file.writelines(detail)\n",
     "                print('  |_ %s' % detail_txt_name)\n",
     "            # Accuracy file (with accuracy dictionary).\n",
     "            # FIXME: Move the next 5 lines into the (if mode == 'accuracy') block,\n",
@@ -1690,10 +1727,10 @@
     "                match = re.match('accuracy=(.+)%, good=(\\d+), total=(\\d+)', accuracy_line)\n",
     "                accuracy_pc = float(match.group(1))\n",
     "                checklist = get_checklist(division=division, system=system, system_name=system_json['system_name'],\n",
-    "                                          benchmark=benchmark, accuracy_pc=accuracy_pc)\n",
+    "                                          revision=loadgen_revision, benchmark=benchmark, accuracy_pc=accuracy_pc)\n",
     "                with open(checklist_path, 'w') as checklist_file:\n",
     "                    checklist_file.writelines(checklist)                    \n",
-    "                    \n",
+    "\n",
     "#             # Trace file (should omit trace from v0.5).\n",
     "#             trace_json_name = 'mlperf_log_trace.json'\n",
     "#             trace_json_path = os.path.join(last_dir, trace_json_name)\n",
@@ -1707,8 +1744,7 @@
     "submitter = 'dividiti'\n",
     "\n",
     "repos = [\n",
-    "    'mlperf.closed.image-classification.mate10pro.armnn-v19.08.neon',\n",
-    "    'mlperf.closed.image-classification.mate10pro.armnn-v19.08.opencl'\n",
+    "     'mlperf.open.image-classification.rpi4.armnn-v19.08.neon', # ready for upload\n",
     "]\n",
     "# repos = repos_merged\n",
     "for repo_uoa in repos:\n",
@@ -1737,6 +1773,13 @@
     "        print(results_dir)\n",
     "        print('  |_%s' % checker_log_name)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
